Fix AWS RDS Support conditional check

--- a/roles/radiusdesk/templates/app.php.j2
+++ b/roles/radiusdesk/templates/app.php.j2
@@ -240,7 +240,7 @@ return [
             'className' => 'Cake\Database\Connection',
             'driver' => 'Cake\Database\Driver\Mysql',
             'persistent' => false,
-            {% if enable_aws_rds_support == 'yes' %}
+            {% if enable_aws_rds_support %}
             'host' => '{{ aws_rds_host }}',
             {% else %}
             'host' => '{{ rd_db_host }}',
