--- a/roles/radiusdesk/templates/database.php.j2
+++ b/roles/radiusdesk/templates/database.php.j2
@@ -62,7 +62,7 @@ class DATABASE_CONFIG {
 	public $default = array(
 		'datasource' => 'Database/Mysql',
 		'persistent' => false,
-		{% if enable_aws_rds_support == 'yes' %}
+		{% if enable_aws_rds_support %}
         'host' => '{{ aws_rds_host }}',
         {% else %}
         'host' => '{{ rd_db_host }}',
