Fix MESHDesk.php Jinja2 Syntax

--- a/roles/radiusdesk/templates/MESHdesk.php.j2
+++ b/roles/radiusdesk/templates/MESHdesk.php.j2
@@ -11,7 +11,7 @@ $config['Meshes']['captive_portal']['radius_1']         = '{{ coovachilli_radius
 //$config['ApProfiles']['captive_portal']['radius_2']         = '198.27.111.78'; //Optional second fallback RADIUS
 $config['Meshes']['captive_portal']['radius_secret']    = '{{ freeradius_secret }}'; //Change this to the common site wide secret used by Dynamic RADIUS Clients
 //Use DNS name in ual_url to look more professional / or IP Address 
-$config['Meshes']['captive_portal']['uam_url']          = 'http://{{ coovachilli_radius_server1/cake3/rd_cake/dynamic-details/chilli-browser-detect/'; 
+$config['Meshes']['captive_portal']['uam_url']          = 'http://{{ coovachilli_radius_server1 }}/cake3/rd_cake/dynamic-details/chilli-browser-detect/'; 
 $config['Meshes']['captive_portal']['uam_secret']       = '{{ coovachilli_uam_secret }}'; //Usually you will not change this value
 
 //$config['ApProfiles']['captive_portal']['walled_garden'] = "www.radiusdesk.com,www.google.com"; //Optional
